user profile information view/edit feature added haven't tested out updateUser() on profile.component.ts due to unable to configure production environment
user._links.self.href property is configured to http://localhost:8082/api/users/{{user_id}}
which is not remote database uri.

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -25,9 +25,10 @@ spring:
 #    url: jdbc:mysql://whiletruedb.cbyi87n6etmg.us-east-2.rds.amazonaws.com/prototype?characterEncoding=utf8
 #    username: whiletrue
 #    password: emichCS3
-    url: jdbc:mysql://localhost/prototype?characterEncoding=utf8
-    username: root
-    password: Liuli512104
+    url: jdbc:mysql://test1.cwjsmxczwg0g.us-west-2.rds.amazonaws.com/prototype
+    username: dragon
+    password: teamdragon
+    
 
   # ===============================
   # = SPRING DATA REST CONFIG
